--- a/index4.html
+++ b/index4.html
@@ -9,10 +9,9 @@
   </head>
   <body>
     <h1>Automatic Parking Assist</h1>
-    <iframe
+    <iframe width="auto" height="auto"
       class="hi2"
-      width="1024"
-      height="576"
+      
       src="https://www.youtube.com/embed/kDQE4Pg51KA?autoplay"
       ;
     ></iframe
